feat: added blobs

--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
     <link rel="stylesheet" href="./index.css" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <div class="purple-blob"></div>
+    <div class="light-grey-blob"></div>
+  </body>
 </html>
