feat: added content box of front items

--- a/index.html
+++ b/index.html
@@ -4,11 +4,29 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="./images/favicon-32x32.png" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./index.css" />
     <title>Document</title>
   </head>
   <body>
-    <div class="purple-blob"></div>
-    <div class="light-grey-blob"></div>
+    <div class="back-items">
+      <div class="purple-blob"></div>
+      <div class="light-grey-blob"></div>
+    </div>
+    <div class="front-items">
+      <div class="phone"></div>
+      <div class="paragraph">
+        <span class="heading">Simple booking</span>
+        <p class="content">
+          Stay in touch with our dog walkers through the chat interface. This
+          makes it easy to discuss arrangements and make booking. Once the walk
+          has been completed you can rate your walker and book again all through
+          the chat.
+        </p>
+      </div>
+    </div>
   </body>
 </html>
