feat: iphone - only left messages, mobile presentation

--- a/index.html
+++ b/index.html
@@ -17,7 +17,40 @@
       <div class="light-grey-blob"></div>
     </div>
     <div class="front-items">
-      <div class="phone"></div>
+      <div class="phone">
+        <div class="user-heading">
+          <div class="phone-white-blob"></div>
+          <div class="user-heading-content">
+            <img class="app-icon-back" src="./images/go-previous-svgrepo-com.svg" />
+            <img class="avatar" src="./images/avatar.jpg" />
+            <div class="spans">
+              <span class="name-span">Samuel Green</span>
+              <span class="status-span">Available to walk</span>
+            </div>
+            <img
+              class="app-icon-three-dots"
+              src="./images/three-dots-vertical-svgrepo-com.svg"
+            />
+          </div>
+        </div>
+        <div class="texts">
+          <div class="me-text-1"></div>
+          <div class="me-text-2"></div>
+          <div class="dog-pictures-text">
+            <img class="dog-picture-1" src="" alt="" />
+            <img class="dog-picture-2" src="" alt="" />
+            <img class="dog-picture-3" src="" alt="" />
+          </div>
+          <div class="you-text-1"></div>
+          <div class="you-text-2"></div>
+          <div class="me-text-3"></div>
+          <div class="me-purple-texts">
+            <div class="me-purple-text-1"></div>
+            <div class="me-purple-text-2"></div>
+          </div>
+        </div>
+        <div class="message-typing-box"></div>
+      </div>
       <div class="paragraph">
         <span class="heading">Simple booking</span>
         <p class="content">
