feat: only message-typing-box left in iphone

--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
         <div class="user-heading">
           <div class="phone-white-blob"></div>
           <div class="user-heading-content">
-            <img class="app-icon-back" src="./images/go-previous-svgrepo-com.svg" />
+            <img
+              class="app-icon-back"
+              src="./images/go-previous-svgrepo-com.svg"
+            />
             <img class="avatar" src="./images/avatar.jpg" />
             <div class="spans">
               <span class="name-span">Samuel Green</span>
@@ -34,19 +37,40 @@
           </div>
         </div>
         <div class="texts">
-          <div class="me-text-1"></div>
-          <div class="me-text-2"></div>
-          <div class="dog-pictures-text">
-            <img class="dog-picture-1" src="" alt="" />
-            <img class="dog-picture-2" src="" alt="" />
-            <img class="dog-picture-3" src="" alt="" />
+          <div class="me-text">
+            That sounds great. I'd be happy to discuss more.
           </div>
-          <div class="you-text-1"></div>
-          <div class="you-text-2"></div>
-          <div class="me-text-3"></div>
-          <div class="me-purple-texts">
-            <div class="me-purple-text-1"></div>
-            <div class="me-purple-text-2"></div>
+          <div class="me-text">
+            Could you send over some pictures of your dog, please?
+          </div>
+          <div class="dog-pictures">
+            <img class="dog-picture" src="./images/dog-image-1.jpg" alt="" />
+            <img class="dog-picture" src="./images/dog-image-2.jpg" alt="" />
+            <img class="dog-picture" src="./images/dog-image-3.jpg" alt="" />
+          </div>
+          <div class="you-text-1">
+            Here are a few pictures. She's a happy girl!
+          </div>
+          <div class="you-text-2">Can you make it?</div>
+          <div class="me-text">
+            She looks so happy! The time we discussed works. How long shall I
+            take her out for?
+          </div>
+          <div class="me-purple-text">
+            <img
+              class="app-icon-circle"
+              src="./images/white-circle-svgrepo-com.svg"
+            />
+            <span class="walk-time-span">30 minute walk</span>
+            <span class="price-span">$29</span>
+          </div>
+          <div class="me-purple-text">
+            <img
+              class="app-icon-circle"
+              src="./images/white-circle-svgrepo-com.svg"
+            />
+            <span class="walk-time-span">1 hour walk</span>
+            <span class="price-span">$49</span>
           </div>
         </div>
         <div class="message-typing-box"></div>
