feat: finished message-typing-box and fixed phone size

--- a/index.html
+++ b/index.html
@@ -73,7 +73,12 @@
             <span class="price-span">$49</span>
           </div>
         </div>
-        <div class="message-typing-box"></div>
+        <div class="message-typing-box">
+          <input type="text" placeholder="Type a message..." />
+          <div class="message-typing-box-send-button">
+            <img src="./images/go-next-svgrepo-com.svg" />
+          </div>
+        </div>
       </div>
       <div class="paragraph">
         <span class="heading">Simple booking</span>
